# rebis

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
contrib/vim/ftdetect/: rebis.vim
contrib/vim/syntax/: rebis.vim
docs/: GUIDE.md  HOSTS.md  REFERENCE.md  SPEC.md  STD.md
examples/: ascend.rebis  best-of.rebis  compose.rebis  incident.rebis  notes.txt  orders.txt  review.rebis  whiteboard.rebis
paper/: README.md  build.sh  paper.css  paper.html
paper/fixtures/: host-base.txt  host-program.rebis  worked-evidence.rebis  worked-evidence.txt
src/: agents.rs  eval.rs  lib.rs  main.rs  record.rs  stdlib.rs  syntax.rs  tree.rs
src/std/: canon.rebis  committee.rebis  debate.rebis  dialectic.rebis  evolve.rebis  flow.rebis  gate.rebis  loops.rebis  map.rebis  reflexion.rebis  search.rebis  shape.rebis  spread.rebis  tournament.rebis
tests/: README.md  calculus_edge_cases.rs  cli_edge_cases.rs  conformance.rs  module_edge_cases.rs  parallel_squares.rs  runtime_edge_cases.rs  std_library.rs  syntax_edge_cases.rs
tests/support/: mod.rs
